[package]
name = "SE3ClassroomBorrowingBackend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
nanoid = "0.4.0"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
sea-orm = { version = "2.0.0-rc", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
] }
tower-sessions = "0.14.0"
axum-login = "0.18.0"
tower-sessions-redis-store = "0.16.0"
argon2 = { version = "0.5.3", features = ["password-hash"] }
serde = "1.0.228"
dotenv = "0.15.0"
utoipa-scalar = { version = "0.3", features = ["axum"] }
utoipa = { version = "5", features = ["axum_extras"] }
