[package]
name = "SE3ClassroomBorrowingBackend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
nanoid = "0.4.0"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
sea-orm = { version = "2.0.0-rc", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
tower-sessions = "0.14.0"
axum-login = "0.18.0"
tower-sessions-redis-store = "0.16.0"
argon2 = { version = "0.5.3", features = ["password-hash"] }
serde = "1.0.228"
dotenv = "0.15.0"
utoipa-scalar = { version = "0.3", features = ["axum"] }
utoipa = { version = "5", features = ["axum_extras"] }
axum_typed_multipart = "0.16.4"
reqwest = { version = "0.12.24", default-features = false, features = ["multipart", "json", "rustls-tls"] }
serde_json = "1.0.145"
mail-send = "0.5.2"
string-builder = "0.2.0"
chrono = "0.4.42"

[dependencies.redis]
version = "*"
default-features = false
features = ["tokio-rustls-comp", "tokio-comp"]

[target.'cfg(all(target_env = "musl", not(target_os = "macos")))'.dependencies]
mimalloc = { version = "0.1", default-features = false }
